--- a/7. Scikit-learn.ipynb
+++ b/7. Scikit-learn.ipynb
@@ -23,8 +23,7 @@
     "        - [*Esercizio 5*](#Esercizio-5)\n",
     "    - [Alberi di decisione](#Alberi-di-decisione)\n",
     "        - [*Esercizio 6*](#Esercizio-6)\n",
-    "        - [*Esercizio 7*](#Esercizio-7)\n",
-    "    - [*Esercizio 8*](#Esercizio-8)"
+    "    - [*Esercizio 7*](#Esercizio-7)"
    ]
   },
   {
@@ -882,7 +881,7 @@
    "source": [
     "Notare, tra gli altri, il parametro *max_depth*: questo indica la profondità massima di espansione dell'albero in fase di addestramento.\n",
     "\n",
-    "Ripetiamo quanto fatto in precedenza utilizzando un'utilità del modulo *model_selection* per la separazione in training e test set."
+    "Ripetiamo quanto fatto in precedenza utilizzando un'utilità del modulo *model_selection* per la separazione dei dati in training e test set."
    ]
   },
   {
@@ -960,7 +959,7 @@
    "source": [
     "Notare come tutti i modelli di sklearn espongano le stesse funzioni.\n",
     "\n",
-    "E' un buon risultato? Guardiamo che errore commette l'albero sui dati di apprendimento, e a che profondità è arrivato."
+    "Quello che abbiamo ottenuto è un buon risultato? Guardiamo che errore commette l'albero sui dati di apprendimento, e a che profondità è arrivato."
    ]
   },
   {
@@ -1007,7 +1006,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cosa è successo? Siamo contenti? Proviamo ad impostare una profondità più bassa."
+    "Cosa è successo? Siamo contenti? Proviamo ad impostare una profondità massima più bassa."
    ]
   },
   {
@@ -1056,30 +1055,21 @@
    "source": [
     "### *Esercizio 6*\n",
     "\n",
-    "Validare la profondità massima (*max_depth*) del DT costruito nelle celle precedenti."
+    "Utilizzare un DT per la classificazione degli iris, validando la profondità massima."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *Esercizio 7*\n",
-    "\n",
-    "Utilizzare un DT per la classificazione degli iris."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*Esercizio 8*\n",
+    "*Esercizio 7*\n",
     "---\n",
-    "Ripetere quanto visto finora lavorando sul dataset *digits*."
+    "Ripetere quanto visto in questa Lezione sul dataset *digits*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1078,7 @@
        "(64,)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1102,7 @@
        "0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,16 +1113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f8fa9a77390>"
+       "<matplotlib.image.AxesImage at 0x7f8baf95b240>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1159,16 +1149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f8fa9a0a240>"
+       "<matplotlib.image.AxesImage at 0x7f8baf8ed160>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1191,6 +1181,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "digits['target'][1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1199,7 +1209,17 @@
     "- scegliere un modello adatto al task (classificazione o regressione?)\n",
     "- preparare i dati\n",
     "- separare gli insiemi di addestramento, validazione e test\n",
-    "- addestrare e testare il modello."
+    "- addestrare, validare e testare il modello\n",
+    "- confrontare i risultati ottenuti con un modello differente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FILL ME"
    ]
   },
   {
