--- a/1. Variabili, stringhe e numeri.ipynb
+++ b/1. Variabili, stringhe e numeri.ipynb
@@ -23,15 +23,11 @@
    "source": [
     "Info\n",
     "---\n",
-    "**Python** è un linguaggio di programmazione ad *alto livello*. Su https://docs.python.org/3 trovate la documentazione ufficiale del linguaggio. *Python Data Science Handbook* (http://shop.oreilly.com/product/0636920034919.do) e *Introduction to Machine Learning with Python* (http://shop.oreilly.com/product/0636920030515.do) sono due ottimi libri per imparare Python nel contesto della Data Science.\n",
-    "\n",
-    "A prescindere dall'applicazione, programmare è un'abilità molto utile. Python è uno dei modi più semplici, immediati e divertenti di iniziare.\n",
+    "A prescindere dall'applicazione, programmare è un'abilità molto utile. **Python** è linguaggio immediato e divertente per iniziare. Inoltre, Python è un ottimo linguaggio per lavorare con i dati: [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/index.html) e [Introduction to Machine Learning with Python](https://drive.google.com/file/d/19lqIILSWwidDsFkYEUDoxtC9WEgNMgWi/view?usp=sharing) sono due ottimi libri per imparare Python nel contesto della Data Science.\n",
     "\n",
     "**Anaconda** è una distribuzione di Python pensata per la Data Science: https://www.anaconda.com/distribution/.\n",
     "\n",
-    "**Jupyter** (https://jupyter.org/) è una delle *librerie* Python che troviamo dentro Anaconda. Oltre ad essere un *ambiente di sviluppo* interattivo, incredibilmente efficiente nella prototipazione di idee e algoritmi, è molto comodo per realizzare presentazioni a carattere scientifico.\n",
-    "\n",
-    "Queste lezioni sono realizzate con Jupyter. Ciascun file Jupyter è detto *notebook*, e ha estensione .ipynb."
+    "**Jupyter** (https://jupyter.org/) è una delle *librerie* Python che troviamo dentro Anaconda. Oltre ad essere un *ambiente di sviluppo* interattivo, incredibilmente efficiente nella prototipazione di idee e algoritmi, è molto comodo per realizzare presentazioni a carattere scientifico. Queste lezioni sono realizzate con Jupyter. Ciascun file Jupyter è detto *notebook*, e ha estensione .ipynb."
    ]
   },
   {
@@ -174,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ogni cella funziona come un terminale interattivo. Eseguendo la cella qui sopra sto chiedendo a Jupyter qual è il valore della variabile *a*. Si può usare questa sintassi in alternativa alla funzione print. In queste lezioni userò entrambi i costrutti."
+    "Ogni cella funziona come un terminale interattivo. Eseguendo la cella qui sopra sto chiedendo a Jupyter *qual è il valore della variabile a*? Si può usare questa sintassi in alternativa alla funzione print. In queste lezioni userò entrambi i costrutti."
    ]
   },
   {
@@ -752,13 +748,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ricordiamoci che la stringa costruita qui sopra è una variabile, e che print non fa altro che stamparla."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -845,7 +834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
