--- a/5. Dizionari.ipynb
+++ b/5. Dizionari.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "*Contenuti*\n",
     "===\n",
-    "- [Un database di proprietà immobiliari](#Un-database-di-proprietà-immobiliari)\n",
+    "- [Un database di immobili](#Un-database-di-immobili)\n",
     "    - [Dizionari: definizione e sintassi](#Dizionari:-definizione-e-sintassi)\n",
     "    - [Accesso](#Accesso)\n",
     "    - [Operazioni su dizionario](#Operazioni-su-dizionario)\n",
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Un database di proprietà immobiliari\n",
+    "Un database di immobili\n",
     "===\n",
     "Spesso gli elementi di una lista hanno un significato particolare. Immaginiamo ad esempio di costruire un database di immobili, definiti da:\n",
     "\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,19 +44,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Proprietà #0\n",
+      "Immobile #0\n",
       "Coordinate: [12.3456, -56.789]\n",
       "Estensione (mq): 2000\n",
       "Terreno annesso?: No\n",
       "Prezzo: 10K Euro\n",
       "\n",
-      "Proprietà #1\n",
+      "Immobile #1\n",
       "Coordinate: [-8.9101, 60.1234]\n",
       "Estensione (mq): 12000\n",
       "Terreno annesso?: No\n",
       "Prezzo: 125K Euro\n",
       "\n",
-      "Proprietà #2\n",
+      "Immobile #2\n",
       "Coordinate: [45.6789, 10.3456]\n",
       "Estensione (mq): 100\n",
       "Terreno annesso?: Sì\n",
@@ -65,30 +65,30 @@
     }
    ],
    "source": [
-    "properties = []#database vuoto\n",
+    "estates = []#database vuoto\n",
     "\n",
-    "p1 = [[12.3456, -56.7890], 2000 , False,   10]#creazione immobile\n",
-    "properties += [p1]#aggiunta immobile al db\n",
+    "e1 = [[12.3456, -56.7890], 2000 , False,   10]#creazione immobile\n",
+    "estates += [e1]#aggiunta immobile al db\n",
     "\n",
-    "p2 = [[-8.9101,  60.1234], 12000, False,  125]\n",
-    "properties += [p2]\n",
+    "e2 = [[-8.9101,  60.1234], 12000, False,  125]\n",
+    "estates += [e2]\n",
     "\n",
-    "p3 = [[45.6789,  10.3456], 100  , True,  350]\n",
-    "properties += [p3]\n",
+    "e3 = [[45.6789,  10.3456], 100  , True,  350]\n",
+    "estates += [e3]\n",
     "\n",
-    "for i, p in enumerate(properties):\n",
-    "    print('\\nProprietà #{}'.format(i))#'\\n' va a capo\n",
-    "    print('Coordinate: {}'.format(p[0]))\n",
-    "    print('Estensione (mq): {}'.format(p[1]))\n",
-    "    print('Terreno annesso?: {}'.format('Sì' if p[2] else 'No'))\n",
-    "    print('Prezzo: {}K Euro'.format(p[3]))"
+    "for i, e in enumerate(estates):\n",
+    "    print('\\nImmobile #{}'.format(i))#'\\n' va a capo\n",
+    "    print('Coordinate: {}'.format(e[0]))\n",
+    "    print('Estensione (mq): {}'.format(e[1]))\n",
+    "    print('Terreno annesso?: {}'.format('Sì' if e[2] else 'No'))\n",
+    "    print('Prezzo: {}K Euro'.format(e[3]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quando le informazioni di un immobile sono tante, però, gestirle in questo modo diventa scomodo. Infatti, per accedere ad una informazione dobbiamo saperne la posizione nella lista."
+    "Quando le informazioni di un immobile sono tante, però, gestirle in questo modo diventa scomodo. Infatti per accedere ad una proprietà dell'immobile dobbiamo saperne la posizione nella lista."
    ]
   },
   {
@@ -126,25 +126,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "properties = []\n",
+    "estates = []\n",
     "\n",
-    "p1 = {'coordinates':[12.3456, -56.7890], 'extension':2000,  'has_land':False, 'price':10}\n",
-    "properties += [p1]\n",
+    "e1 = {'coordinates':[12.3456, -56.7890], 'extension':2000,  'has_land':False, 'price':10}\n",
+    "estates += [e1]\n",
     "\n",
-    "p2 = {'coordinates':[-8.9101,  60.1234], 'extension':12000, 'has_land':False, 'price':125}\n",
-    "properties += [p2]\n",
+    "e2 = {'coordinates':[-8.9101,  60.1234], 'extension':12000, 'has_land':False, 'price':125}\n",
+    "estates += [e2]\n",
     "\n",
-    "p3 = {'coordinates':[45.6789,  10.3456], 'extension':100,   'has_land':True,  'price':350}\n",
-    "properties += [p3]"
+    "e3 = {'coordinates':[45.6789,  10.3456], 'extension':100,   'has_land':True,  'price':350}\n",
+    "estates += [e3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,13 +156,13 @@
        " 'price': 10}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p1"
+    "e1"
    ]
   },
   {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,18 +185,18 @@
        "10"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p1['price']"
+    "e1['price']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -204,19 +204,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Proprietà #0\n",
+      "Immobile #0\n",
       "Coordinate: [12.3456, -56.789]\n",
       "Estensione (mq): 2000\n",
       "Terreno annesso?: No\n",
       "Prezzo: 10K Euro\n",
       "\n",
-      "Proprietà #1\n",
+      "Immobile #1\n",
       "Coordinate: [-8.9101, 60.1234]\n",
       "Estensione (mq): 12000\n",
       "Terreno annesso?: No\n",
       "Prezzo: 125K Euro\n",
       "\n",
-      "Proprietà #2\n",
+      "Immobile #2\n",
       "Coordinate: [45.6789, 10.3456]\n",
       "Estensione (mq): 100\n",
       "Terreno annesso?: Sì\n",
@@ -225,12 +225,12 @@
     }
    ],
    "source": [
-    "for i, p in enumerate(properties):\n",
-    "    print('\\nProprietà #{}'.format(i))\n",
-    "    print('Coordinate: {}'.format(p['coordinates']))\n",
-    "    print('Estensione (mq): {}'.format(p['extension']))\n",
-    "    print('Terreno annesso?: {}'.format('Sì' if p['has_land'] else 'No'))\n",
-    "    print('Prezzo: {}K Euro'.format(p['price']))"
+    "for i, e in enumerate(estates):\n",
+    "    print('\\nImmobile #{}'.format(i))\n",
+    "    print('Coordinate: {}'.format(e['coordinates']))\n",
+    "    print('Estensione (mq): {}'.format(e['extension']))\n",
+    "    print('Terreno annesso?: {}'.format('Sì' if e['has_land'] else 'No'))\n",
+    "    print('Prezzo: {}K Euro'.format(e['price']))"
    ]
   },
   {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -251,13 +251,13 @@
        "[10, 125, 350]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[p['price'] for p in properties]"
+    "[h['price'] for h in estates]"
    ]
   },
   {
@@ -275,16 +275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Villa Bianca': 500, 'Pino marittimo': 250, 'La stamberga': 100}"
+       "{'Villa Bianca': 500, 'Il pino marittimo': 250, 'La stamberga': 100}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
     "prices = {}#database: dizionario vuoto\n",
     "\n",
     "prices['Villa Bianca'] = 500#inserimento\n",
-    "prices['Pino marittimo'] = 250\n",
+    "prices['Il pino marittimo'] = 250\n",
     "prices['La stamberga'] = 100\n",
     "\n",
     "prices"
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
      "output_type": "stream",
      "text": [
       "Il prezzo settimanale di Villa Bianca è 500 Euro\n",
-      "Il prezzo settimanale di Pino marittimo è 250 Euro\n",
+      "Il prezzo settimanale di Il pino marittimo è 250 Euro\n",
       "Il prezzo settimanale di La stamberga è 80 Euro\n"
      ]
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
      "output_type": "stream",
      "text": [
       "Nome appartamento: Villa Bianca\n",
-      "Nome appartamento: Pino marittimo\n",
+      "Nome appartamento: Il pino marittimo\n",
       "Nome appartamento: La stamberga\n"
      ]
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -427,16 +427,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['La stamberga', 'Pino marittimo', 'Villa Bianca']"
+       "['Il pino marittimo', 'La stamberga', 'Villa Bianca']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,15 +447,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Il prezzo di Il pino marittimo è 250 Euro\n",
       "Il prezzo di La stamberga è 80 Euro\n",
-      "Il prezzo di Pino marittimo è 250 Euro\n",
       "Il prezzo di Villa Bianca è 500 Euro\n"
      ]
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,11 +521,11 @@
    "source": [
     "*Esercizio 3*\n",
     "---\n",
-    "Seguendo [quanto fatto in precedenza](#Dizionari:-definizione-e-sintassi), costruire un database di proprietà immobiliari con dati e campi a piacere.\n",
+    "Seguendo [quanto fatto in precedenza](#Dizionari:-definizione-e-sintassi), costruire un database di immobili con dati e proprietà a piacere.\n",
     "\n",
-    "Definire una funzione che prenda in ingresso una singola proprietà immobiliare e ne stampi le informazioni, come [visto qui sopra](#Accesso).\n",
+    "Definire una funzione che prenda in ingresso un singolo immobile e ne stampi le informazioni, come [visto qui sopra](#Accesso).\n",
     "\n",
-    "Iterare sugli immobili attraverso una enumerazione. Per ogni proprietà, stampare\n",
+    "Iterare sugli immobili attraverso una enumerazione. Per ognuno, stampare\n",
     "- l'indice di inserimento nel database\n",
     "- le sue informazioni, usando la funzione appena definita."
    ]
@@ -565,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
