--- a/2. Funzioni.ipynb
+++ b/2. Funzioni.ipynb
@@ -62,14 +62,12 @@
     "Ordine delle chiamate\n",
     "---\n",
     "\n",
-    "Una funzione può chiamarne un'altra: è così che funzionano tutti i programmi complessi. L'ordine delle chiamate durante l'esecuzione è salvato nella *stack trace*: https://en.wikipedia.org/wiki/Stack_trace.\n",
-    "\n",
-    "Attenzione all'ordine di dichiarazione."
+    "Una funzione può chiamarne un'altra: è così che funzionano tutti i programmi complessi. L'ordine delle chiamate durante l'esecuzione è salvato nella *stack trace*: https://en.wikipedia.org/wiki/Stack_trace."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,13 +80,13 @@
     }
    ],
    "source": [
+    "def fun_1(arg):\n",
+    "    print('fun_1: sto chiamando fun_2')\n",
+    "    fun_2(arg)\n",
+    "\n",
     "def fun_2(arg):\n",
     "    print('fun_2:', arg)\n",
     "\n",
-    "def fun_1(arg):\n",
-    "    print('fun_1: sto chiamando fun_2')\n",
-    "    fun_2(arg)#f_1 chiama f_2, che deve essere già stata dichiarata\n",
-    "    \n",
     "fun_1('ciao!')"
    ]
   },
@@ -103,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +136,7 @@
        "50"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +172,7 @@
        "1000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
