--- a/3. Liste, cicli e comprensioni.ipynb
+++ b/3. Liste, cicli e comprensioni.ipynb
@@ -433,7 +433,7 @@
    "source": [
     "Ricerca\n",
     "---\n",
-    "Se si cerca un oggetto preciso nella lista, si può controllare che vi sia contenuto e in quale posizione."
+    "Possiamo controllare se un certo oggetto è contenuto in una lista."
    ]
   },
   {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "['circle', 'hexagon', 'square', 'triangle']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -534,25 +534,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lista ordinata: ['rhombus', 'hexagon', 'square', 'triangle']\n"
+      "lista ordinata modificata: ['rhombus', 'hexagon', 'square', 'triangle']\n"
      ]
     }
    ],
    "source": [
     "sorted_shapes[0] = 'rhombus'#modifica\n",
-    "print('lista ordinata:', sorted_shapes)"
+    "print('lista ordinata modificata:', sorted_shapes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
     "counter = 0\n",
     "\n",
     "for shape in shapes:\n",
-    "    print(\"L'elemento in posizione {} è {}\".format(counter, shape))#uso doppi apici perchè stringa contiene '\n",
+    "    print(\"L'elemento in posizione {} è {}\".format(counter, shape))#uso doppi apici perché stringa contiene '\n",
     "    counter += 1"
    ]
   },
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1276,9 +1276,9 @@
     }
    ],
    "source": [
-    "capitalized_names = [n.upper()[0] for n in names]\n",
+    "capitalized_initials = [n.upper()[0] for n in names]\n",
     "\n",
-    "capitalized_names"
+    "capitalized_initials"
    ]
   },
   {
@@ -1356,7 +1356,7 @@
    "source": [
     "*Esercizio 6*\n",
     "---\n",
-    "Rifare l'esercizio 4, utilizzando una comprensione di lista."
+    "Ripetere l'esercizio 4 (senza la stampa) utilizzando una comprensione di lista."
    ]
   },
   {
@@ -1403,7 +1403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
