--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "[100, 4, 16, 64, 2.8899999999999997]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        " [4, 'maria teresa']]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "[100, 4, 16, 64, 2.8899999999999997]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,20 +299,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_property_info(p):\n",
-    "    print('Paese: {}'.format(p['country']))\n",
-    "    print('Estensione (mq): {}'.format(p['extension']))\n",
-    "    print('Terreno annesso?: {}'.format('Sì' if p['has_land'] else 'No'))\n",
-    "    print('Prezzo: {}K Euro'.format(p['price']))"
+    "def show_estate_info(e):\n",
+    "    print('Paese: {}'.format(e['country']))\n",
+    "    print('Estensione (mq): {}'.format(e['extension']))\n",
+    "    print('Terreno annesso?: {}'.format('Sì' if e['has_land'] else 'No'))\n",
+    "    print('Prezzo: {}K Euro'.format(e['price']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -320,19 +320,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Proprietà #0\n",
+      "Immobile #0\n",
       "Paese: Italia\n",
       "Estensione (mq): 2000\n",
       "Terreno annesso?: No\n",
       "Prezzo: 10K Euro\n",
       "\n",
-      "Proprietà #1\n",
+      "Immobile #1\n",
       "Paese: Spagna\n",
       "Estensione (mq): 12000\n",
       "Terreno annesso?: No\n",
       "Prezzo: 125K Euro\n",
       "\n",
-      "Proprietà #2\n",
+      "Immobile #2\n",
       "Paese: Argentina\n",
       "Estensione (mq): 50000\n",
       "Terreno annesso?: Sì\n",
@@ -341,26 +341,17 @@
     }
    ],
    "source": [
-    "properties = []\n",
+    "estates = []\n",
     "\n",
-    "p1 = {'country':'Italia',    'extension':2000,  'has_land':False, 'price':10}\n",
-    "p2 = {'country':'Spagna',    'extension':12000, 'has_land':False, 'price':125}\n",
-    "p3 = {'country':'Argentina', 'extension':50000, 'has_land':True,  'price':300}\n",
+    "e1 = {'country':'Italia',    'extension':2000,  'has_land':False, 'price':10}\n",
+    "e2 = {'country':'Spagna',    'extension':12000, 'has_land':False, 'price':125}\n",
+    "e3 = {'country':'Argentina', 'extension':50000, 'has_land':True,  'price':300}\n",
     "\n",
-    "properties += [p1, p2, p3]\n",
+    "estates += [e1, e2, e3]\n",
     "\n",
-    "for i, p in enumerate(properties):\n",
-    "    print(f'\\nProprietà #{i}')#sintassi alternativa a format, disponibile da Python 3.6\n",
-    "    show_property_info(p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "###################"
+    "for i, e in enumerate(estates):\n",
+    "    print(f'\\nImmobile #{i}')#sintassi alternativa a format, disponibile da Python 3.6\n",
+    "    show_estate_info(e)"
    ]
   },
   {
@@ -373,17 +364,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.000364008741215\n",
-      "1.000364008741213\n",
-      "428 ms ± 22.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "2.52 ms ± 498 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "0.9983962196795021\n",
+      "0.9983962196795204\n",
+      "843 ms ± 187 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "3.12 ms ± 214 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -416,50 +407,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[206   1 111  55 205]\n",
-      "  [ 66 240  32  41  23]\n",
-      "  [167 132 152 138 113]\n",
-      "  [181  39  58   7  38]\n",
-      "  [ 25 112 160  42  84]]\n",
+      "[[[ 10 121 192  62  10]\n",
+      "  [100   8 117 122 213]\n",
+      "  [239 229 225 145 151]\n",
+      "  [233 221 204 163 169]\n",
+      "  [193 170  83  59 152]]\n",
       "\n",
-      " [[153  54 173 239 152]\n",
-      "  [158 251  21 222  28]\n",
-      "  [ 81 235 196 139  12]\n",
-      "  [ 82 236 192  81 221]\n",
-      "  [ 22 230 189  94 210]]\n",
+      " [[ 14  51 182 198 135]\n",
+      "  [240  50 127 140  27]\n",
+      "  [124  77 111 134  10]\n",
+      "  [221 127  63 236 124]\n",
+      "  [  6 216   8 171 240]]\n",
       "\n",
-      " [[ 18 162  27  60 184]\n",
-      "  [233  68 204 153 159]\n",
-      "  [160 223 205 114 173]\n",
-      "  [129 184 228  61 172]\n",
-      "  [158  61  20 163 227]]\n",
+      " [[  7  92 123  51  62]\n",
+      "  [ 77 165  80   6 181]\n",
+      "  [ 73 206 185  43 177]\n",
+      "  [  5 204 158  36  64]\n",
+      "  [169 234  98 160   0]]\n",
       "\n",
       " ...\n",
       "\n",
-      " [[243 183 191  90  91]\n",
-      "  [141  87 115 230  13]\n",
-      "  [169 145 108  93  67]\n",
-      "  [176 116 207 100 154]\n",
-      "  [ 99 203  58  26  11]]\n",
+      " [[244  82 232 100  15]\n",
+      "  [ 46  36 225  49  92]\n",
+      "  [153  39 234 130 212]\n",
+      "  [133  31 145 161  50]\n",
+      "  [109 168  85 148 233]]\n",
       "\n",
-      " [[196  83 183 171 209]\n",
-      "  [ 11 128  32  42 213]\n",
-      "  [243 168  74 178 199]\n",
-      "  [167  93 198  94 143]\n",
-      "  [140 219   7  52   0]]\n",
+      " [[ 27  43 200  18  63]\n",
+      "  [ 29 227 178 201  62]\n",
+      "  [174 241  19 234  53]\n",
+      "  [183 212  40  90 251]\n",
+      "  [ 90 138 156  60  81]]\n",
       "\n",
-      " [[ 52 132  40 222 120]\n",
-      "  [199  44 184 174 186]\n",
-      "  [ 67 150 214 212  17]\n",
-      "  [ 45 169 253  63 149]\n",
-      "  [ 12  42  51 150 226]]]\n"
+      " [[252 114 211 111  59]\n",
+      "  [179  49 154 104 100]\n",
+      "  [195 143 145   1  64]\n",
+      "  [115   8  97 114 248]\n",
+      "  [ 81  71 164 221  11]]]\n"
      ]
     }
    ],
@@ -476,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -493,18 +484,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[114.88 130.8  127.14 151.04 127.52]\n",
-      " [133.58 123.46 109.34 136.06 134.06]\n",
-      " [139.88 138.62 140.88 138.32 130.14]\n",
-      " [119.26 144.7  123.38 131.96 127.3 ]\n",
-      " [129.42 121.88 124.82 131.48 118.78]]\n",
+      "[[121.72 139.18 143.84 114.44 129.6 ]\n",
+      " [138.24 124.66 134.   127.56 135.28]\n",
+      " [136.88 151.9  113.38 130.12 110.18]\n",
+      " [130.06 123.6  124.66 132.06 146.94]\n",
+      " [145.   119.98 128.42 123.78 136.1 ]]\n",
       "(5, 5)\n"
      ]
     }
@@ -525,16 +516,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.004\n",
-      "0.004\n",
-      "2.998506349757395 2.998506349757395\n"
+      "5.0003\n",
+      "0.0003\n",
+      "3.0009090647790866 3.0009090647790866\n"
      ]
     }
    ],
@@ -566,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -751,16 +742,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.61306346 0.90234858 0.09928035 0.96980907 0.65314004]\n",
-      "1.6022040728828197\n",
-      "1.6022040728828197\n"
+      "[0.37302077 0.08657242 0.13471425 0.60975698 0.6514999 ]\n",
+      "0.9803279509839358\n",
+      "0.9803279509839358\n"
      ]
     }
    ],
@@ -775,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
