corretta lezione numpy

--- a/6. NumPy.ipynb
+++ b/6. NumPy.ipynb
@@ -511,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Attraverso il campo *ndim* si può accedere al numero di dimensioni di un array."
+    "Attraverso la proprietà *ndim* si può accedere al numero di dimensioni di un array."
    ]
   },
   {
@@ -1193,7 +1193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le funzioni aggregate di NumPy possono essere utilizzate su ognuno degli *axes* di un array. Ogni axis corrisponde ad una dimensione; il numero di axes è quindi pari al valore del campo ndim.\n",
+    "Le funzioni aggregate di NumPy possono essere utilizzate su ognuno degli *axes* di un array. Ogni axis corrisponde ad una dimensione; il numero di axes è quindi pari al valore della proprietà ndim.\n",
     "\n",
     "Un array monodimensionale avrà solo l'*axis 0*, uno bidimensionale gli axes 0 e 1, e così via.\n",
     "\n",
