corretto errore soluzioni numpy

--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -459,9 +459,9 @@
     "import numpy.random as rdm\n",
     "\n",
     "n_frames = 50\n",
-    "n_pixel_x = 5\n",
     "n_pixel_y = 5\n",
-    "movie = rdm.randint(0, 256, (n_frames, n_pixel_x, n_pixel_y))\n",
+    "n_pixel_x = 5\n",
+    "movie = rdm.randint(0, 256, (n_frames, n_pixel_y, n_pixel_x))\n",
     "print(movie)"
    ]
   },
