--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -374,10 +374,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9993435202891516\n",
-      "0.9993435202891559\n",
-      "414 ms ± 10.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "2.88 ms ± 180 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "1.0009324216394049\n",
+      "1.0009324216394035\n",
+      "430 ms ± 11.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "3.13 ms ± 248 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -417,43 +417,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[101 222  74 112 167]\n",
-      "  [206 245  72 227 132]\n",
-      "  [  4 201  47 131 125]\n",
-      "  [232 132   7 176  16]\n",
-      "  [113 135 230  93 240]]\n",
+      "[[[ 55 139  96  69  69]\n",
+      "  [ 84 186 244  68 141]\n",
+      "  [218 152 122 244 168]\n",
+      "  [  3 119  11 113  10]\n",
+      "  [124 184 165  38  62]]\n",
       "\n",
-      " [[ 53 154  43  49  23]\n",
-      "  [201 187 247  60 241]\n",
-      "  [140  84 130 204 114]\n",
-      "  [127 113  54 219 133]\n",
-      "  [ 13 103  51 117 127]]\n",
+      " [[112 136 217 172  43]\n",
+      "  [138 231 223 215  67]\n",
+      "  [ 95 156 245  14  34]\n",
+      "  [236 249 176 234 133]\n",
+      "  [155 248  51  58 145]]\n",
       "\n",
-      " [[ 41 233  10 216  17]\n",
-      "  [124  51 163 237 150]\n",
-      "  [239 140 231  59 141]\n",
-      "  [ 16 108  91 130  26]\n",
-      "  [ 50 200 184 120  50]]\n",
+      " [[135   0  76 224 126]\n",
+      "  [122 124 116 136 175]\n",
+      "  [134 221 157  54 240]\n",
+      "  [232 250  77  88 216]\n",
+      "  [157 136  45 190  84]]\n",
       "\n",
       " ...\n",
       "\n",
-      " [[137  93  20 223 113]\n",
-      "  [ 12  20   9 209 159]\n",
-      "  [139 137 167 152 238]\n",
-      "  [  5  79 216 133   5]\n",
-      "  [122  92 190  49 142]]\n",
+      " [[108 112 188 103 247]\n",
+      "  [194 165 198  52 200]\n",
+      "  [188  83 197 235  25]\n",
+      "  [ 47 232 173  85 187]\n",
+      "  [ 78 166 149  33 156]]\n",
       "\n",
-      " [[ 21  38  98  99  33]\n",
-      "  [ 46 117  25 140 225]\n",
-      "  [240  89   5  41 191]\n",
-      "  [104 192  28 144 221]\n",
-      "  [  0 217   8 214 165]]\n",
+      " [[222  69  11 214 129]\n",
+      "  [211 237 170 157 231]\n",
+      "  [128 103 112 234  55]\n",
+      "  [ 59 149 215 208   7]\n",
+      "  [110 229 228 139  67]]\n",
       "\n",
-      " [[  2  96 124 243 144]\n",
-      "  [ 76 110 196 179 225]\n",
-      "  [226  76 248 181  20]\n",
-      "  [128 123  83 120 117]\n",
-      "  [ 68   5  27  93  12]]]\n"
+      " [[ 41  61 143 154  49]\n",
+      "  [103 240 114 246 175]\n",
+      "  [231 200 152 209 163]\n",
+      "  [161 243  61  42  86]\n",
+      "  [210 158  86  97 170]]]\n"
      ]
     }
    ],
@@ -494,11 +494,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[119.28 131.42 108.62 122.98 127.62]\n",
-      " [109.22 121.74 116.84 128.56 141.5 ]\n",
-      " [124.06 120.36 139.48 113.72 123.34]\n",
-      " [132.98 103.34 105.8  129.64 111.76]\n",
-      " [119.08 124.64 118.48 122.88 126.36]]\n",
+      "[[148.04 113.1  132.78 135.44 122.04]\n",
+      " [140.02 131.58 123.74 109.86 131.72]\n",
+      " [122.82 127.24 139.16 138.04 119.38]\n",
+      " [130.   137.22 127.46 128.04 124.92]\n",
+      " [111.9  135.28 149.68 106.04 126.14]]\n",
       "(5, 5)\n"
      ]
     }
@@ -526,9 +526,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.0022\n",
-      "0.0022\n",
-      "3.0027121388582056 3.0027121388582056\n"
+      "5.0035\n",
+      "0.0035\n",
+      "2.9969759526442674 2.9969759526442674\n"
      ]
     }
    ],
@@ -752,9 +752,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.73921343 0.12478518 0.87182998 0.98686899 0.17691503]\n",
-      "1.5255506172254494\n",
-      "1.5255506172254494\n"
+      "[0.47117195 0.04799353 0.71790242 0.6252569  0.89718032]\n",
+      "1.3912472747047393\n",
+      "1.3912472747047393\n"
      ]
     }
    ],
@@ -1365,25 +1365,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('data/titanic.csv', index_col='PassengerId')\n",
-    "df.rename(columns={'Sex':'Gender'}, inplace=True)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1393,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1414,13 +1395,47 @@
        "Name: Name, Length: 891, dtype: object"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data/titanic.csv', index_col='PassengerId')\n",
+    "df.rename(columns={'Sex':'Gender'}, inplace=True)\n",
+    "\n",
     "df['Name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Braund, Mr. Owen Harris'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Name'].iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = df['Name'].iloc[0]"
    ]
   },
   {
@@ -1440,41 +1455,12 @@
     }
    ],
    "source": [
-    "df['Name'].iloc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = df['Name'].iloc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Braund, Mr. Owen Harris'"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1469,7 @@
        "6"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1489,7 @@
        "','"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1514,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1509,7 @@
        "'M'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1529,7 @@
        "10"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1554,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1563,7 +1549,7 @@
        "'Mr'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1574,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1581,7 @@
        "Name: Name, Length: 891, dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1606,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1615,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1778,7 +1764,7 @@
        "20                                     Masselmani, Mrs. Fatima     Mrs"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1789,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1801,21 +1787,21 @@
        "Master           40\n",
        "Dr                7\n",
        "Rev               6\n",
-       "Col               2\n",
        "Mlle              2\n",
+       "Col               2\n",
        "Major             2\n",
+       "Jonkheer          1\n",
+       "Ms                1\n",
        "Lady              1\n",
        "Don               1\n",
-       "Ms                1\n",
-       "Sir               1\n",
-       "the Countess      1\n",
-       "Jonkheer          1\n",
        "Capt              1\n",
        "Mme               1\n",
+       "Sir               1\n",
+       "the Countess      1\n",
        "Name: Title, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1826,7 +1812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1899,7 @@
        "760              0      0  110152  86.5   B77        S  the Countess  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1954,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1963,7 +1949,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1974,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1971,7 @@
        "Name: Gender, dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1996,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2007,7 +1993,7 @@
        "Name: Gender, dtype: float64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2018,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2029,7 +2015,7 @@
        "Name: Gender, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2052,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2064,7 +2050,7 @@
        "Name: Survived, dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2084,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2096,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2105,7 +2091,7 @@
        "233"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2118,7 +2104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2127,7 +2113,7 @@
        "468"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2140,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2149,7 +2135,7 @@
        "0.7867564534231201"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2160,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -2169,7 +2155,7 @@
        "(0.6475869809203143, 0.35241301907968575)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2182,7 +2168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2191,7 +2177,7 @@
        "(0.7420382165605095, 0.18890814558058924)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2204,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2213,7 +2199,7 @@
        "0.7867564534231202"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2232,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2291,7 +2277,7 @@
        "male    30.726645                  Mr       0.814558"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
