--- a/8. Pandas.ipynb
+++ b/8. Pandas.ipynb
@@ -1974,7 +1974,7 @@
    "source": [
     "Fin qui abbiamo estratto un singolo valore (la media) da ogni gruppo. Adesso siamo interessati ad analizzare la *distribuzione* dei valori in ogni gruppo.\n",
     "\n",
-    "Iniziamo dalla distribuzione della variabile Age su tutto il campione dei dati di addestramento. Possiamo utilizzare la funzione *distplot*."
+    "Iniziamo dalla distribuzione della variabile Age su tutto il campione dei dati di addestramento. Possiamo utilizzare la funzione *displot*."
    ]
   },
   {
