aggiornata intro a seaborn in lezione pandas

--- a/8. Pandas.ipynb
+++ b/8. Pandas.ipynb
@@ -1676,7 +1676,11 @@
    "source": [
     "# La libreria *seaborn*\n",
     "\n",
-    "Per la visualizzazione statistica dei dati Pandas si appoggia alla libreria *seaborn*. [Qui](https://seaborn.pydata.org/examples/index.html) trovate una carrellata di esempi; [qui](https://seaborn.pydata.org/tutorial/distributions.html) una panoramica delle funzioni di visualizzazione univariata e bivariata.\n",
+    "Per la visualizzazione statistica dei dati Pandas si appoggia alla libreria *seaborn*. \n",
+    "\n",
+    "[Qui](https://seaborn.pydata.org/tutorial) trovate una sezione *User guide and tutorial* fatta molto bene; si tratta di un'ottima risorsa per capire \"quando usare quale grafico\", in base all'obiettivo dell'analisi e al numero e tipo delle variabili interessate.\n",
+    "\n",
+    "[Qui](https://seaborn.pydata.org/examples/index.html) c'è una carrellata di esempi sui singoli grafici.\n",
     "\n",
     "La libreria supporta l'interazione coi DataFrame Pandas. Vediamo alcuni esempi di utilizzo."
    ]
