--- a/7. Scikit-learn.ipynb
+++ b/7. Scikit-learn.ipynb
@@ -838,7 +838,7 @@
     "\n",
     "Una volta scelto il valore dei parametri, una pratica comune è utilizzare *tutti* i dati del training set (anche quelli usati per la validazione) per un nuovo addestramento.\n",
     "\n",
-    "- ricomporre $X^{train}$ e $y^{train}$ a partire da $X^{tr}$, $X^{val}$, $y^{tr}$ e $y^{val}$ e usarli per addestrare KNN con $k=3$\n",
+    "- ricomporre $X_{train}$ e $y_{train}$ a partire da $X_{tr}$, $X_{val}$, $y_{tr}$ e $y_{val}$ e usarli per addestrare KNN con $k=3$\n",
     "- confrontare l'accuratezza con quella ottenuta qui sopra: ci abbiamo guadagnato qualcosa ad usare tutti i dati per l'addestramento finale?"
    ]
   },
