--- a/7. Scikit-learn.ipynb
+++ b/7. Scikit-learn.ipynb
@@ -18,7 +18,7 @@
     "        - [Valutazione](#Valutazione)\n",
     "    - [Dai dati alla predizione](#Dai-dati-alla-predizione)\n",
     "        - [*Esercizio 3*](#Esercizio-3)        \n",
-    "    - [Model selection](#Model-selection)\n",
+    "    - [Validazione](#Validazione)\n",
     "        - [*Esercizio 4*](#Esercizio-4)\n",
     "    - [Alberi di decisione](#Alberi-di-decisione)\n",
     "        - [*Esercizio 5*](#Esercizio-5)"
@@ -732,7 +732,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model selection\n",
+    "Validazione\n",
     "---\n",
     "Torniamo alla classificazione di iris e calibriamo il valore di $k$. Abbiamo bisogno di un insieme di validazione."
    ]
