--- a/7. Scikit-learn.ipynb
+++ b/7. Scikit-learn.ipynb
@@ -40,11 +40,11 @@
     "\n",
     "Sulla [pagina di sklearn](http://scikit-learn.org/stable/) si trovano svariati modelli di machine learning, insieme a strumenti di preprocessing, analisi e visualizzazione dei dati. \n",
     "\n",
-    "Ciascuna implementazione fa riferimento ad una guida utente molto dettagliata, che associa al codice la teoria necessaria per capirlo ed usarlo: http://scikit-learn.org/stable/modules/classes.html.\n",
+    "Ciascuna implementazione fa riferimento ad una [guida utente](https://scikit-learn.org/stable/user_guide.html#user-guide) molto dettagliata, che associa al codice la teoria necessaria per capirlo ed usarlo.\n",
     "\n",
     "Oltre a permettere di *usare* il machine learning scrivendo pochissime righe di codice, la libreria è altamente modulare e dà la possibilità agli utenti di costruire la propria implementazione basandosi su funzioni, oggetti ed interfacce esistenti.\n",
     "\n",
-    "Teoria e codice sono spesso supportati da esempi pratici di utilizzo, affiancati da analisi grafiche: http://scikit-learn.org/stable/auto_examples/."
+    "Teoria e codice sono spesso supportati da [esempi pratici](http://scikit-learn.org/stable/auto_examples/)."
    ]
   },
   {
